--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 ###> symfony/framework-bundle ###
 .idea
+.gitignore
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -16,6 +18,5 @@
 ###< phpunit/phpunit ###
 
 ###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
+
 ###< symfony/phpunit-bridge ###
