--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
+        "symfony/debug": "^4.4",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
