--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 semaine en secondes
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppAuthenticator
