--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/console": "6.2.*",
         "symfony/debug": "^4.4",
         "symfony/dotenv": "6.2.*",
+        "symfony/event-dispatcher": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
