ADD : changer mdp

--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ APP_SECRET=4c1b75dc3e11b4a7dc08cfd4e7bdf683
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
