ADD : Bouton inscription fonctionnel, procedure mysql corrigées, creation classe et formulaire pour les filtres de la liste de sortie.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD : enieni
       MYSQL_DATABASE : sortirdb
+      TZ : Europe/Paris
 
     expose :
       - "3306"
