--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,12 +5,15 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     photo_directory: '%kernel.project_dir%/public/photoprofil'
+    csv_participants_directory: '%kernel.project_dir%/public/CSV'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
